fix(Page): page header overflow issues

--- a/frappe/public/scss/desk/page.scss
+++ b/frappe/public/scss/desk/page.scss
@@ -56,7 +56,7 @@
 	align-items: center;
 	.btn {
 		height: var(--btn-height);
-		margin-left: var(--margin-sm, 8px);
+		margin-left: 8px;
 		border-radius: var(--border-radius);
 		line-height: 1;
 		padding: 4px 8px;
@@ -64,16 +64,16 @@
 		& .hidden-xs {
 			display: inline-flex;
 			align-items: center;
-			gap: 6px;
+			gap: 2px;
 		}
 	}
 	.btn:not(.icon-btn) {
 		padding: 4px 8px;
 	}
-	.btn-primary,
-	.btn-secondary {
-		min-width: 40px;
-	}
+	//.btn-primary,
+	//.btn-secondary {
+	//	min-width: 40px;
+	//}
 	.custom-btn-group {
 		display: inline-flex;
 	}
